--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<input class="color1" type="color" name="color1" value="#00ff00">
 	<input class="color2" type="color" name="color2" value="#ff0000">
 	<p>
-		<button class="randomise" name="randomise">Randomise</button>
+		<button class="randomise" name="randomise">Random</button>
 	</p>
 	<h2>Current CSS Background</h2>
 	<h3></h3>
